--- a/assets/admin/scss/_variable.scss
+++ b/assets/admin/scss/_variable.scss
@@ -3,5 +3,6 @@ $secondary: #f39229;
 $background: #e6e7e8;
 $white: #ffffff;
 $neutralGray: #868585;
+$dark: #000000;
 
 $font-family-serif: 'Roboto Slab', serif;
